--- a/texto.tex
+++ b/texto.tex
@@ -11,6 +11,7 @@
 \usepackage{verbatim}
 \usepackage{enumerate}
 \usepackage{fancyvrb}
+\usepackage{float}
 
 \usepackage{setspace}
 \doublespacing
@@ -57,7 +58,7 @@
 \tableofcontents
 \listoffigures
 \listoftables
-\listofalgorithms
+%\listofalgorithms
 \clearpage
 
 \chapter{Introduction}
